<?xml version='1.0' encoding='UTF-8'?>
<resources>
  <string name="menu_zim_manager">Get Content</string>
  <string name="menu_help">Help</string>
  <string name="menu_home">Home</string>
  <string name="menu_forward">Forward</string>
  <string name="menu_back">Back</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_search">Search article</string>
  <string name="menu_searchintext">Find in page</string>
  <string name="menu_bookmarks">Bookmarks</string>
  <string name="menu_randomarticle">Random article</string>
  <string name="menu_fullscreen">Full screen</string>
  <string name="menu_exitfullscreen">Exit full screen</string>
  <string name="menu_read_aloud">Read aloud</string>
  <string name="menu_read_aloud_stop">Stop reading aloud</string>
  <string name="menu_rescan_fs">Rescan SD card</string>
  <string name="save_media">Save Media</string>
  <string name="save_media_error">An error occurred when trying to save the media!</string>
  <string name="save_media_saved">Saved media as %s to Android/media/org.kiwix.../</string>
  <string name="rescan_fs_warning">Scanning for downloadable content, please wait…</string>
  <string name="button_backtotop">Back to Top</string>
  <string name="search_label">Search</string>
  <string name="articlesearch_hint">Type to lookup articles</string>
  <string name="choose_file">Select a Content File (*.zim)</string>
  <string name="add_bookmark">Add bookmark</string>
  <string name="remove_bookmark">Remove bookmark</string>
  <string name="open_in_new_tab">Open link in new tab?</string>
  <string name="error_nozimfilesfound">No content found on your device.\nTake a look at the Help Page to get directions on how to load content into Kiwix.\nIf you did put a ZIM file on your device/external storage, you might retry in a minute or restart your device.</string>
  <string name="error_filenotfound">Error: The selected ZIM file could not be found.</string>
  <string name="error_fileinvalid">Error: The selected file is not a valid ZIM file.</string>
  <string name="error_articlenotfound">Error: Loading article \"%1$s\" failed.</string>
  <string name="error_articleurlnotfound">Error: Loading article (Url: %1$s) failed.</string>
  <string name="pref_display_title">Display</string>
  <string name="pref_zoom_sub_title">Zoom</string>
  <string name="pref_zoom_dialog">Zoom level</string>
  <string-array name="pref_zoom_entries">
    <item name="pref_zoom_entry_automatic">Automatic</item>
    <item name="pref_zoom_entry_small">Small</item>
    <item name="pref_zoom_entry_medium">Medium</item>
    <item name="pref_zoom_entry_large">Large</item>
  </string-array>
  <string name="pref_info_title">Information</string>
  <string name="pref_info_version">Version</string>
  <string name="pref_zoom_enable">Zoom controls</string>
  <string name="pref_nightmode">Night mode</string>
  <string name="pref_nightmode_summary">Show articles with inverted colors</string>
  <string name="pref_backtotop">Back to Top</string>
  <string name="pref_backtotop_summary">Display a button at the end of the page to scroll up to the top</string>
  <string name="pref_hidetoolbar">Hide toolbar when scrolling</string>
  <string name="pref_hidetoolbar_summary">Hide the toolbar when the page is scrolled down</string>
  <string name="pref_language_title">Language</string>
  <string name="pref_language_chooser">Choose a language</string>
  <string name="pref_credits">Contributors and Licenses</string>
  <string name="pref_credits_title">Credits</string>
  <string name="tts_lang_not_supported">The language of this page is not supported, or appropriate language data was not installed. The article may not be properly read.</string>
  <string name="no_reader_application_installed">Could not find an installed application for this type of file</string>
  <string name="customapp_missing_content">Your application is corrupted.\nThis might happen when you remove files on the SD Card.\nYou need to uninstall then reinstall the App from the Play Store.</string>
  <string name="go_to_play_store">Go to Play Store</string>
  <string name="no_bookmarks">No Bookmarks</string>
  <string name="menu_bookmarks_list">Bookmarks</string>
  <string name="no_section_info">No Content Headers Found</string>
  <string name="request_storage">To access offline content we need access to your storage</string>
  <string name="request_storage_custom">If you see a screen overlay warning simply restart your device to fix.</string>
  <string name="clear_recent_history_dialog">Are you sure you want to delete your search history?</string>
  <string name="clear_recent_and_tabs_history_dialog">Are you sure you want to delete your search history and reset all active tabs?</string>
  <string name="delete_recent_search_item">Delete this item?</string>
  <string name="pref_clear_all_history_title">Clear history</string>
  <string name="pref_clear_all_history_summary">Clear recent searches and tabs history</string>
  <string name="all_history_cleared_toast">All History Cleared</string>
  <string name="clear_all_history_dialog_title">Clear All History</string>
  <string name="delete">Delete</string>
  <string name="delete_specific_search_toast">Recent search removed</string>
  <string name="hint_contents_drawer_message">You can swipe left to view the contents of this article</string>
  <string name="got_it">Got it</string>
  <string name="did_you_know">Did you know?</string>
  <string name="undo">Undo</string>
  <string name="tab_closed">Tab closed</string>
  <string name="deleted_message">deleted</string>
  <string name="bookmarks_restored">Bookmarks restored</string>
  <string name="bookmark_added">Bookmark added</string>
  <string name="rate_dialog_title">Please Rate Us</string>
  <string name="rate_dialog_msg_1">If you enjoy using</string>
  <string name="rate_dialog_msg_2">, please take a moment to rate it. Thanks for your support!</string>
  <string name="rate_dialog_positive">Rate!</string>
  <string name="rate_dialog_negative">No, thanks</string>
  <string name="rate_dialog_neutral">Later</string>
  <string name="open">Open</string>
  <string name="bookmark_removed">Bookmark removed</string>
  <string name="pref_newtab_background_title">Open new tab in background</string>
  <string name="pref_newtab_background_summary">When opening a new tab it will open in background</string>
  <string name="pref_extras">Extras</string>
  <string name="new_tab_snackbar">Article opened in new tab</string>
  <string name="search_widget_text">Search Kiwix</string>
  <string name="speech_prompt_text">Speak to search %s</string>
  <string name="speech_not_supported">Sorry! Your device does not support speech input</string>
  <string name="download_started_library">Download started…</string>
  <string name="menu_library">Download content files</string>
  <string name="local_zims">Device</string>
  <string name="remote_zims">Online</string>
  <string name="zim_downloads">Downloading</string>
  <string name="zim_manager">Content Management</string>
  <string name="delete_specific_zim">Delete this file?</string>
  <string name="delete_specific_zim_toast">File deleted</string>
  <string name="zim_file_downloading">Downloading</string>
  <string name="zim_file_downloaded">Downloaded</string>
  <string name="download_pause">Pause</string>
  <string name="download_play">Play</string>
  <string name="download_stop">Stop</string>
  <string name="download_close">Close</string>
  <string name="no_downloads_here">No downloads here</string>
  <string name="no_files_here">No files here</string>
  <string name="download_complete_snackbar">Download complete</string>
  <string name="download_over_network">Are you sure you want to start the download without WiFi?</string>
  <string name="download_no_space">Insufficient space to download this file.</string>
  <string name="space_available">Space Available:</string>
  <string name="zim_simple">Simple</string>
  <string name="zim_nopic">No Pictures</string>
  <string name="open_partial_zim">This file could be incomplete. Do you wish to attempt to open it?</string>
  <string name="no_network_connection">No network connection</string>
  <string name="get_library_over_network">Use network to download content list. (Approximately 6MB)</string>
  <string name="proceed">Proceed</string>
  <string name="wait_for_load">Content Still Loading</string>
  <string name="help_1">Kiwix allows you offline access to websites such as Wikipedia in a highly compressed form.</string>
  <string name="help_2">What does Kiwix do?</string>
  <string name="help_3">Kiwix is an offline content reader. It acts very much like a browser but instead of accessing online web pages, it reads content from a file in ZIM format.</string>
  <string name="help_4">While Kiwix has been originaly designed to provide Wikipedia offline, it also reads other contents.</string>#
  <string name="help_5">Where is the content?</string>
  <string name="help_6">Our content is hosted on the kiwix website.</string>
  <string name="help_7">They are available as ZIM files. There are a lot of them:</string>
  <string name="help_8">\u2022 Wikipedia is available separately for each language</string>
  <string name="help_9">\u2022 Other contents like Wikileaks or Wikisource are also available</string>
  <string name="help_10">You can either download your choosen ZIM files in-app or carefuly select the one(s) you want and download from a Desktop computer before transfering the ZIM files to your SD card.</string>
  <string name="help_11">ZIM files download in-app are located in the external storage directory in a folder entitled Kiwix.</string>
  <string name="help_12">How to use large ZIM files?</string>
  <string name="help_13">If your ZIM file is larger than 4GB, you might not be able to store it on your SD card due to filesystem limitations.</string>
  <string name="help_14">Downloading in-app automaticaly handles larger files, splitting them up for you.</string>
  <string name="help_15">If however you are downloading on another device, you may need to split the ZIM file up using the following software:</string>
  <string name="help_16">\u2022 On Microsoft Windows: HJ-Split</string>
  <string name="help_17">\u2022 On Apple Mac OSX: Split and Concat</string>
  <string name="help_18">\u2022 On GNU/Linux and with the console: split --bytes=4000M my_big_file.zim</string>
  <string name="help_19">Note: your resulting files must be named my_big_file.zimaa, my_big_file.zimab, etc.</string>
  <string name="help_20">Thank you for choosing Kiwix!</string>
  <string name="help_21">We are glad to have you on board and would appreciate any feedback or suggestions at android@kiwix.org.</string>
  <string name="pref_storage">Storage</string>
  <string name="pref_current_folder">Current Folder</string>
  <string name="path_not_writable">Can not access desired directory, using default. To fix this reselect the desired directory in app settings.</string>
  <string name="pref_full_text_search_title">Fulltext Search</string>
  <string name="pref_full_text_search_summary">Allow app to search the text within articles. Caution this can slow search down considerably.</string>
  <string name="reboot_message">Due to a bug in android 6.0 we require you to reboot your device to continue without granting us the storage permission. We are sorry for any inconvenience this may cause.</string>
  <string name="delete_zim_failed">Sorry we were unable to delete this file. You should try using a file manager instead.</string>
  <string name="tts_pause">pause</string>
  <string name="tts_resume">resume</string>
  <string name="tts_stop">stop</string>
  <string name="internal_storage">Internal</string>
  <string name="external_storage">External</string>
  <string name="zim_already_downloading">Zim is already downloading</string>
  <string name="no_network_msg">No network connection</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="confirm_stop_download_title">Stop download?</string>
  <string name="confirm_stop_download_msg">Are you sure you want to stop this download?</string>
  <string name="download_change_storage">Storage device selector</string>
  <string name="tts_not_enabled">Text to speech is not enabled for this ZIM file</string>
</resources>
