...

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
      android:id="@+id/library_list"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingBottom="60dp"
      android:divider="@null"/>

    <TextView
...
