...
  android:layout_height="match_parent"
  android:fitsSystemWindows="false"
  android:orientation="vertical">


  <android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.internal.ScrimInsetsFrameLayout
      android:id="@+id/content_frame"
...
